// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > matches snapshot (offline) 1`] = `
<div>
  <span
    class="badge badge-offline"
  >
    Offline
  </span>
</div>
`;

exports[`Badge > matches snapshot (online) 1`] = `
<div>
  <span
    class="badge badge-online"
  >
    Online
  </span>
</div>
`;

exports[`Badge > matches snapshot (transitioning) 1`] = `
<div>
  <span
    class="badge badge-transitioning"
  >
    Starting...
  </span>
</div>
`;
